name:                web-push
version:             0.5
synopsis:            Send messages using Web Push protocol.
description:
    Web Push is a simple protocol for delivery of real-time events
    to user agents using HTTP/2 server push. This can be used to send
    notifications to browsers using the Push API.
homepage:            https://github.com/sarthakbagaria/web-push#readme
license:             MIT
license-file:        LICENSE
author:              Sarthak Bagaria
maintainer:          kevincotrone@gmail.com
copyright:           2023 Kevin Cotrone
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       2.0

library
  hs-source-dirs:      src
  exposed-modules:     Web.WebPush
                       Web.WebPush.Internal
  ghc-options:        -Wall -fwarn-tabs -O2
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 2.0 && < 3.0
                     , base64-bytestring >= 1.0.0.1 && < 1.3
                     , binary >= 0.7.5 && < 0.9
                     , bytestring >= 0.9 && < 0.13
                     , crypton >= 0.30
                     , http-client >= 0.5.7 && < 0.8
                     , http-types >= 0.8.6 && < 1.0
                     , lens >= 4.15.1
                     , memory >= 0.14.5 && < 0.19
                     , mtl >= 2.2 && < 3.0
                     , network-uri >= 2.6 && < 3.0
                     , random >= 1.1 && < 1.3
                     , safe-exceptions >= 0.1.7 && < 0.2
                     , text >= 0.11 && < 3.0
                     , time
                     , transformers >= 0.5.2.0 && < 0.7

  default-language:    Haskell2010

Test-Suite web-push-selenium-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      selenium-tests
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , tasty
                     , tasty-hunit
                     , unordered-containers
                     , web-push
                     , webdriver-w3c >= 0.0.3 && < 0.1

executable web-push-example
  hs-source-dirs:      example
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , directory
                     , http-api-data
                     , http-client
                     , http-conduit
                     , http-media
                     , lens
                     , mustache
                     , servant
                     , servant-server
                     , text
                     , time
                     , transformers
                     , warp
                     , web-push ^>= 0.5

source-repository head
  type:     git
  location: https://github.com/sarthakbagaria/web-push
