name:                web-push
version:             0.5
synopsis:            Send messages using Web Push protocol.
description:
    Web Push is a simple protocol for delivery of real-time events
    to user agents using HTTP/2 server push. This can be used to send
    notifications to browsers using the Push API.
homepage:            https://github.com/sarthakbagaria/web-push#readme
license:             MIT
license-file:        LICENSE
author:              Sarthak Bagaria
maintainer:          kevincotrone@gmail.com
copyright:           2023 Kevin Cotrone
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       2.0

library
  hs-source-dirs:      src
  exposed-modules:     Web.WebPush
                       Web.WebPush.Internal
  ghc-options:        -Wall -fwarn-tabs -O2
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 2.0 && < 3.0
                     , base64 >= 0.4 && < 0.5
                     , binary >= 0.7.5 && < 0.9
                     , bytestring >= 0.9 && < 0.13
                     , crypton >= 0.30
                     , http-client >= 0.5.7 && < 0.8
                     , http-types >= 0.8.6 && < 1.0
                     , lens >= 4.15.1
                     , memory >= 0.14.5 && < 0.19
                     , mtl >= 2.2 && < 3.0
                     , network-uri >= 2.6 && < 3.0
                     , random >= 1.1 && < 1.3
                     , safe-exceptions >= 0.1.7 && < 0.2
                     , text >= 0.11 && < 3.0
                     , time
                     , transformers >= 0.5.2.0 && < 0.7

  default-language:    Haskell2010

Test-Suite web-push-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       WebPushEncryptionSpec WebPushMock
  ghc-options:        -Wall -Werror
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , base64
                     , binary
                     , bytestring
                     , hspec
                     , http-client
                     , lens
                     , process
                     , tasty
                     , tasty-hspec >= 1.1.3.2
                     , tasty-hunit
                     , text
                     , time
                     , unordered-containers
                     , web-push
                     , wreq

source-repository head
  type:     git
  location: https://github.com/cotrone/web-push
