name:                web-push
version:             0.5
synopsis:            Send messages using Web Push protocol.
description:
    Web Push is a simple protocol for delivery of real-time events
    to user agents using HTTP/2 server push. This can be used to send
    notifications to browsers using the Push API.
homepage:            https://github.com/cotrone/web-push#readme
license:             MIT
license-file:        LICENSE
author:              Sarthak Bagaria
maintainer:          kevincotrone@gmail.com
copyright:           2023 Kevin Cotrone
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       2.0

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Web.WebPush
                       Web.WebPush.Keys
                       Web.WebPush.Internal
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 2.0 && < 2.2
                     , asn1-encoding >= 0.9 && < 0.10
                     , asn1-types >= 0.3 && < 0.4
                     , base64 >= 0.4 && < 0.5
                     , binary >= 0.7.5 && < 0.9
                     , bytestring >= 0.9 && < 0.13
                     , containers >= 0.6 && < 0.7
                     , crypton >= 0.30 && < 1.0
                     , crypton-x509 >= 1.7 && < 1.8
                     , crypton-x509-store >= 1.6 && < 1.7
                     , http-api-data >= 0.4 && < 0.7
                     , http-client >= 0.5.7 && < 0.8
                     , http-types >= 0.8.6 && < 1.0
                     , memory >= 0.14.5 && < 0.19
                     , mtl >= 2.2 && < 3.0
                     , network-uri >= 2.6 && < 3.0
                     , pem >= 0.2 && < 0.3
                     , random >= 1.2 && < 1.3
                     , safe-exceptions >= 0.1.7 && < 0.2
                     , text >= 0.11 && < 3.0
                     , time >= 1.0 && < 2

Test-Suite web-push-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       WebPushEncryptionSpec WebPushMock
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 2.0 && < 2.2
                     , base64 >= 0.4 && < 0.5
                     , binary >= 0.7.5 && < 0.9
                     , bytestring >= 0.9 && < 0.13
                     , hspec >= 2.0 && < 3.0
                     , http-client >= 0.5.7 && < 0.8
                     , lens >= 4.15.1 && < 6.0
                     , network-uri >= 2.6 && < 3.0
                     , process >= 1.0 && < 2.0
                     , tasty >= 1.0 && < 2.0
                     , tasty-hspec >= 1.1.3.2 && < 2.0
                     , tasty-hunit >= 0.10 && < 0.11
                     , text >= 0.11 && < 3.0
                     , time >= 1.0 && < 2
                     , web-push
                     , wreq >= 0.5 && < 0.6

source-repository head
  type:     git
  location: https://github.com/cotrone/web-push
