cabal-version:      3.0
name:               web-push-example
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Kevin Cotrone
maintainer:         kevincotrone@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files: templates/*.mustache

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  WebPushExample Templates
    -- other-modules:
    -- other-extensions:
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:    base >= 4.7 && < 5
                    , aeson
                    , bytestring
                    , containers
                    , directory
                    , file-embed
                    , http-api-data
                    , http-client
                    , http-conduit
                    , http-media
                    , lens
                    , mustache
                    , servant
                    , servant-server
                    , stm
                    , text
                    , time
                    , transformers
                    , template-haskell
                    , warp
                    , web-push ^>= 0.5

executable web-push-example-server
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends: base >= 4.7 && < 5
                 , web-push ^>= 0.5
                 , web-push-example
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite web-push-example-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N1
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base >= 4.7 && < 5
                     , aeson
                     , containers
                     , process
                     , safe-exceptions
                     , stm
                     , tasty
                     , tasty-hunit
                     , unix
                     , unordered-containers
                     , web-push-example
                     , webdriver-w3c >= 0.0.3 && < 0.1
